# BizHawk

./: .editorconfig  .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .gitmodules  .global.editorconfig.ini  .globalconfig  .stylecop.json  .travis.yml  APK_GENERATION_README.md  APK_SIGNING_GUIDE.md  ARM64_MOBILE_SUPPORT.md  ATTRIBUTIONS.md  Audio.cs  BATTERY_OPTIMIZATION_GUIDE.md  BHTest.sln  BUG_MITIGATION_GUIDE.md  BizHawk.pro.sln  BizHawk.sln  BizHawk.sln.DotSettings  BizHawk.slnx  BizHawkMono.sln  BizHawk_2012.sln  Building Other Solutions.txt  CADE_O_APK.md  CODE_OF_CONDUCT.md  COMMIT_LOG.md  COMPREHENSIVE_IMPROVEMENTS.md  CONTRIBUTORS.md  Common.abs.props  Common.props  Common.ruleset  CommonNullable.abs.props  CommonNullable.props  CommonRefAssemblies.props  CommonResourceGen.props  CommonResourceGen.rel.props  CommonStyleCopAnalyzer.props  DOCUMENTATION_INDEX.md  DOWNLOAD_APK.md  (+82 more)
ExternalProjects/SDL2/: CMakeLists.txt  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh
ExternalProjects/libchd-rs-capi/: Cargo.toml  README.md  build_release.bat  build_release.sh
ExternalProjects/libchd-rs-capi/src/: header.rs  lib.rs
ExternalProjects/librcheevos/: CMakeLists.txt  Makefile  build_debug.bat  build_debug.sh  build_release.bat  build_release.sh
ExternalProjects/vrEmu6502/: .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  build_linux.sh
ExternalProjects/vrEmu6502/src/: CMakeLists.txt  vrEmu6502.c  vrEmu6502.h
ExternalProjects/vrEmu6502/test/: CMakeLists.txt  README.md  vrEmu6502Test.c
ExternalProjects/vrEmu6502/test/programs/: 6502_decimal_test.a65  6502_decimal_test.hex  6502_decimal_test.lst  6502_functional_test.a65  6502_functional_test.hex  6502_functional_test.lst  65C02_decimal_test.a65  65C02_decimal_test.hex  65C02_decimal_test.lst  65C02_extended_opcodes_test.a65c  65C02_extended_opcodes_test.hex  README.md  (+7 more)
branches/portable/yabause/: README.WII  configure.in
branches/release/mednafen/: acinclude.m4  configure.ac
quicknes/: .clang-format  .gitignore  .gitmodules  .run-clang-format.sh  README.md  bizinterface.cpp  meson.build  meson_options.txt
quicknes/fex/: Data_Reader.cpp  Data_Reader.h  Zip_Extractor.cpp  fex.cpp  fex.h
quicknes/libquicknes/: libquicknes.sln  libquicknes.vcxproj  libquicknes.vcxproj.filters
quicknes/libretro/: libretro.cpp
quicknes/libretro/jni/: Android.mk
quicknes/make/: .gitignore  Makefile
quicknes/mingw/: Makefile
quicknes/msvc/: libquickernes.sln  libquickernes.vcxproj  libquicknes.sln  libquicknes.vcxproj  libquicknes.vcxproj.filters
quicknes/nes_emu/: Mapper_Fme7.cpp  Mmc24.h  Multi_Buffer.cpp  Nes_Apu.h  Nes_Blitter.h  Nes_Core.cpp  Nes_Core.h  Nes_Cpu.cpp  Nes_Cpu.h  Nes_Emu.cpp  Nes_Emu.h  Nes_Film_Data.h  Nes_Mapper.cpp  Nes_Mapper.h  Nes_Namco_Apu.cpp  Nes_Namco_Apu.h  Nes_Nonlinearizer.cpp  Nes_Ppu.cpp  Nes_Ppu_Core.cpp  Nes_Ppu_Impl.cpp  Nes_Ppu_Impl.h  Nes_Ppu_Rendering.cpp  Nes_Recorder.h  Nes_Rewinder.cpp  Nes_Rom.h  Nes_Snapshot.h  Nes_Vrc6.cpp  Nes_Vrc6.h  Nes_Vrc6_Apu.cpp  Nes_Vrc6_Apu.h  Nes_Vrc7.cpp  Nes_Vrc7.h  Nonlinear_Buffer.cpp  abstract_file.h  apu_snapshot.cpp  apu_snapshot.h  apu_state.cpp  apu_state.h  blargg_endian.h  emu2413.cpp  (+7 more)
quicknes/nes_emu/mappers/: mapper000.hpp  mapper001.hpp  mapper002.hpp  mapper003.hpp  mapper004.hpp  mapper005.hpp  mapper007.hpp  mapper009.hpp  mapper010.hpp  mapper011.hpp  mapper015.hpp  mapper019.hpp  mapper021.hpp  mapper022.hpp  mapper023.hpp  mapper024.hpp  mapper025.hpp  mapper026.hpp  mapper030.hpp  mapper032.hpp  mapper033.hpp  mapper034.hpp  mapper060.hpp  mapper066.hpp  mapper069.hpp  mapper070.hpp  mapper071.hpp  mapper073.hpp  mapper075.hpp  mapper078.hpp  mapper079.hpp  mapper085.hpp  mapper086.hpp  mapper087.hpp  mapper088.hpp  mapper089.hpp  mapper093.hpp  mapper094.hpp  mapper097.hpp  mapper113.hpp  (+15 more)
quicknes/overlay/: overlay.pdn
quicknes/source/: inputParser.hpp  meson.build  nesInstanceBase.hpp  playbackInstance.hpp  player.cpp  tester.cpp
quicknes/source/quickNES/: meson.build  nesInstance.hpp
quicknes/source/quickerNES/: meson.build  nesInstance.hpp
quicknes/tests/: .gitignore  README.md  arkanoid.arkNESController.sol  arkanoid.arkNESController.test  arkanoid.warpless.sol  arkanoid.warpless.test  arkanoid.warps.sol  arkanoid.warps.test  arkanoid2.arkFamicomController.sol  arkanoid2.arkFamicomController.test  castlevania1.anyPercent.sol  castlevania1.anyPercent.test  castlevania1.pacifist.sol  castlevania1.pacifist.test  castlevania3.playaround.sol  castlevania3.playaround.test  galaga.anyPercent.sol  galaga.anyPercent.test  ironSword.anyPercent.sol  ironSword.anyPercent.test  meson.build  metroid.playaround.sol  metroid.playaround.test  microMachines.race20.sol  microMachines.race20.state  microMachines.race20.test  nigelMansell.anyPercent.sol  nigelMansell.anyPercent.test  ninjaGaiden.anyPercent.sol  ninjaGaiden.anyPercent.test  ninjaGaiden.pacifist.sol  ninjaGaiden.pacifist.test  ninjaGaiden2.anyPercent.sol  ninjaGaiden2.anyPercent.test  ninjaGaiden2.pacifist.sol  ninjaGaiden2.pacifist.test  novaTheSquirrel.anyPercent.sol  novaTheSquirrel.anyPercent.test  princeOfPersia.anyPercent.sol  princeOfPersia.anyPercent.test  (+25 more)
quicknes/tests/roms/: README.md
submodules/sameboy/: .gitignore  BizInterface.c  BizInterface.cpp  CMakeLists.txt  Makefile  SConstruct  blip_buf.os  build.sh  build_release.bat  build_release.sh  joypad.c
waterbox/waterboxhost/: .gitignore  Cargo.toml  README.md  build-debug-no-dirty-detection.bat  build-debug-no-dirty-detection.sh  build-debug.bat  build-debug.sh  build-release-macos.sh  build-release.bat  build-release.sh
waterbox/waterboxhost/src/: bin.rs  calling_convention_adapters.rs  cinterface.rs  elf.rs  gdb.rs  host.rs  lib.rs  syscall_defs.rs  threading.rs
yabause/src/carbon/: Makefile.am  build_dmg.sh  settings.h
yabause/src/psp/: Makefile.am  display.h  icache-funcs-2450.patch  me-sectstart.c  menu.c  osk.h  psp-per.c  rtlinsn.c  sh2-core.i  sh2-opcodeinfo.c  sys.h
yabause/src/windows/: Makefile.am  custctl.h  ram_search.h  ramwatch.h  resource.h
(+22298 files in other folders)
