option('buildPlayer',
  type : 'boolean',
  value : false,
  description : 'Build playback tool',
  yield: true
)

option('buildQuickNES',
  type : 'boolean',
  value : true,
  description : 'Build quickNES core',
  yield: true
)

option('buildTests',
  type : 'boolean',
  value : true,
  description : 'Build tests',
  yield: true
)

option('onlyOpenSource',
  type : 'boolean',
  value : false,
  description : 'Test using only open source games (for cloud CI)',
  yield: true
)

option('enableArkanoidInputs',
  type : 'boolean',
  value : false,
  description : 'Build tests',
  yield: true
)