[package]
name = "chd-capi"
version = "0.3.1"
edition = "2021"
authors = ["Ronny Chan <ronny@ronnychan.ca>"]
description = "libchdr-compatible C API for a Rust implementation of the CHD File Format"
license = "BSD-3-Clause"
repository = "https://github.com/SnowflakePowered/chd-rs"
readme = "README.md"
categories = ["emulators", "compression", "encoding"]
keywords = ["mame", "chd", "decompression"]

[lib]
doctest = false
crate-type = ["cdylib"]

[features]
default = ["chd/max_perf"]
chd_precache = []
verify_block_crc = ["chd/verify_block_crc"]

[profile.release]
lto = true

[dependencies]
chd = { version = "0.3.1", git = "https://github.com/SnowflakePowered/chd-rs" }
