[package]
name = "waterboxhost"
version = "0.1.0"
authors = ["nattthebear <goyuken@gmail.com>"]
edition = "2018"
publish = false
rust = "nightly"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
bitflags = "1.2.1"
page_size = "0.4.2"
lazy_static = "1.4.0"
getset = "0.1.1"
parking_lot = "0.10.2"
itertools = "0.9.0"
goblin = { version = "0.2.3", features = ["elf64", "std"] }
anyhow = "1.0"
sha2 = "0.9.1"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.8", features = ["memoryapi", "handleapi", "errhandlingapi", "winnt"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.71"

[lib]
doctest = false
crate-type=["cdylib"]
