[package]
name = "waterboxhost"
version = "0.1.0"
authors = ["nattthebear <goyuken@gmail.com>"]
edition = "2018"
publish = false

[features]
no-dirty-detection = []

[profile.release]
lto = true

[dependencies]
bitflags = "1.3.2"
page_size = "0.4.2"
lazy_static = "1.4.0"
itertools = "0.9.0"
goblin = { version = "0.2.3", features = ["elf64", "std"] }
anyhow = "1.0"
sha2 = "0.9.9"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["memoryapi", "handleapi", "errhandlingapi", "winnt"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2.155"

[lib]
doctest = false
crate-type=["cdylib"]
